css/anime.css
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

body, html {
    font-family: "Montserrat", sans-serif;
    font-optical-sizing: auto;
    font-weight: 400;
    font-style: normal;
    scroll-behavior: smooth;
}

:root {
    --black: #292929;
    --gray: #f3f3f3;
    --grayoutline: #e7e7e7;
    --anime: #eb4343;
    --photography: #2fcf5f;
    --lifestyle: #f3933a;
    --philanthropy: #2eb2c9;
}

.all {
    width: 100%;
    height: 100vh;
    background-color: orange;
    display: flex;
    justify-content: center;
    align-items: center;
}

.aside-container {
    width: 30%;
    height: 100vh;
    background-color: green;
}

header {
    width: 100%;
    height: 100px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.logo-header-container {
    height: 100%;
    width: 80%;
    display: flex;
    justify-content: center;
    align-items: center;
    font-family: "Great Vibes", cursive;
    font-weight: 400;
    font-size: 30px;
}

nav {
    width: 100%;
    height: 50px;
    background-color: rgb(0, 85, 128);
    display: flex;
    justify-content: center;
    align-items: center;
}

.nav-links {
    width: 80%;
    height: 100%;
    background-color: orange;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 20px;
}
.nav-links a {
    text-decoration: none;
    color: white;
}

.main-container {
    width: 70%;
    height: 100vh;
    background-color: purple;
}

.blog-container {
    width: 900px;
    height: 100%;
    background-color: brown;
    margin: auto;
}

.blog-title-container {
    width: 100%;
    height: auto;
    background-color: blue;
    color: var(--black);
}

.blog-title-container p {
    color: var(--black);
}

.post-meta {
    display: flex;
    align-items: center;
    margin-top: 20px;
    background-color: olivedrab;
}

.author-image {
    width: 40px;
    height: 40px;
    border-radius: 50%;
    margin-right: 10px;
}

.author-name {
    margin-right: 10px;
    font-weight: bold;
}

.post-date {
    color: #888;
}

.test {
    width: 100%;
    height: auto;
    background-color: gray;
    margin-top: 20px;
}

.test p {
    padding: 0;
    line-height: 1.5;
}


.test p:nth-of-type(2n) {
    padding-bottom: 20px;
}


p:hover {
    background-color: green;
}


@media screen and (max-width: 992px) {
    .all {
        flex-direction: column;
    }
    .main-container {
        width: 100%;
        height: 70%;
    }
    .aside-container {
        width: 100%;
        height: 30%;
    }
    .blog-container {
        width: 100%;
    }
}

